small debugging in navigation

--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,11 @@ section {
     }
 }
 
-
+@media (max-width: 1100px) {
+    .nav-item {
+        margin: 15px 20px;
+    }
+}
 /*************************************
                 Skills
 *************************************/
