--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,10 @@ section {
     text-align: justify;
 }
 
+#about-right {
+    margin-top: 40px;
+}
+
 .about-status {
     background-color: #F4F4F4;
     border-radius: 30px;
@@ -358,13 +362,13 @@ section {
 .about-img {
     height: 284px;
     width: 200px;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 25px;
     margin-left: -35%;
 }
 @media only screen and (max-width: 991px){
     .about-img {
-        margin-top: 70px;
+        margin-top: 120px;
     }
 }
 
