--- a/css/style_de.css
+++ b/css/style_de.css
@@ -274,6 +274,10 @@ section {
     text-align: justify;
 }
 
+#about-right {
+    margin-top: 40px;
+}
+
 .about-status {
     background-color: #F4F4F4;
     border-radius: 30px;
@@ -371,7 +375,7 @@ section {
 .about-img {
     height: 284px;
     width: 200px;
-    margin-top: 50px;
+    margin-top: 80px;
     margin-bottom: 25px;
     margin-left: -25%;
 }
@@ -390,11 +394,14 @@ section {
     .about-status-h5-big {
         display: none;
     }
+    .about-img {
+        margin-top: 100px;
+    }
 }
 
 @media only screen and (max-width: 991px){
     .about-img {
-        margin-top: 70px;
+        margin-top: 120px;
     }
     .about-status-h5-small {
         display: block;
