--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ section {
 }
 
 #home-heading-title{
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 #home-heading-name {
@@ -93,11 +93,24 @@ section {
     margin-top: 15%;
 }
 
+#home-heading-title span {
+    text-shadow: 1px 2px 2px #212226;
+}
 /*************************************
              Buttons
 *************************************/
 .contact{
     margin-left: 20px;
     margin-right: 20px;
-    color: #0075B5;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-icon{
+    filter: drop-shadow(0px 0px 5px #777005)
+}
+
+.contact:hover,
+.contact:focus{
+    color: #0077B5;
 }
